tests/functional/data/transpiler/common/errors/atomic/applied_to_wrong_stmt.err
applied_to_wrong_stmt.cpp:4:13: error: 'atomic' attribute only applies to expression or compound statement
    4 |             @atomic for (int k = 0; k < 10; ++k) {
      |             ^
